--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
