--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'pl.tajchert:buswear:0.9.5'
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile project(':song')
 }
