--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".SongActivity">
         </activity>
+        <activity android:name=".SongListActivity"/>
     </application>
 
 </manifest>
