phone starts watch app :)

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         </activity>
 
         <service
-            android:name=".WearDataLayerListenerService">
+            android:name=".WearDataLayerListenerService"
+            android:enabled="true"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
